@@ -1,9 +1,22 @@
 # gluon configuration
 
+require 'Example'
 require 'Welcom'
 
 map '/' do |entry|
   entry.mount Welcom
+end
+
+map '/example'do |entry|
+  entry.mount Example
+end
+
+map '/example/menu' do |entry|
+  entry.mount Example::Menu
+end
+
+map '/example/ex_panel' do |entry|
+  entry.mount Example::ExamplePanel
 end
 
 # Local Variables:
