@@ -3,8 +3,8 @@
 <title>gluon example</title>
 </head>
 <frameset cols="20%,80%">
-  <%= frame :menu, 'name' => 'menu' %>
-  <%= frame :panel, 'name' => 'main' %>
+  <% gluon :menu %>
+  <% gluon :panel %>
 </frameset>
 </html>
 
