@@ -4,9 +4,8 @@
 </head>
 <body>
 
-<%= import :header %>
-<h1><%= value :title %> example</h1>
-<%= import :example %>
+<h1><% gluon :title %> example</h1>
+<% gluon :example %>
 
 <address>
 Author: <a href="mailto:toki@freedom.ne.jp">TOKI Yoshinori &lt;toki@freedom.ne.jp&gt;</a>
